Fixed: navbar overlapping dropdown

--- a/repair/static/css/main-navbar.css
+++ b/repair/static/css/main-navbar.css
@@ -142,7 +142,7 @@
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 10;
 }
 
 .dropdown-content a {
@@ -163,7 +163,7 @@
     color: white;
 }
 
-.show {display:block;}
+.show { display:block; }
 /*.navbar-top select option:checked, .navbar-top select option:hover{
     color: white;
     background-color: #aad400;
